Revert "Fix z-index layer for dropdowns in popup mode"
This reverts commit 4fe4c3230b4852b6babdf829d60c617fcc0533df.

--- a/src/scripts/Providers/OSUI/Dropdown/VirtualSelect/scss/_virtualselect.scss
+++ b/src/scripts/Providers/OSUI/Dropdown/VirtualSelect/scss/_virtualselect.scss
@@ -196,6 +196,8 @@
 
 			&-container {
 				background-color: var(--overlay-background);
+				// The !important is needed in order to overwrite the inline style added by library!
+				z-index: var(--layer-global-elevated) !important;
 			}
 
 			.vscomp-search-container {
@@ -632,7 +634,7 @@ body {
 		}
 
 		.vscomp-wrapper {
-			z-index: var(--layer-global-instant-interaction);
+			z-index: var(--layer-global-off-canvas);
 		}
 	}
 }
